--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,8 +1,8 @@
-name: Check Google Maps Reviews
+name: Check Google Maps Reviews Reviews
 
 on:
   schedule:
-    - cron: '0 1,7,13 * * *'   # 8h sáng, 2h chiều, 8h tối giờ VN (3 lần/ngày)
+    - cron: '0 1,7,13 * * *'   # 8h, 14h, 20h giờ VN
   workflow_dispatch:
 
 jobs:
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}   # cần dòng này
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -26,3 +28,12 @@ jobs:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: python main.py
+
+      # 3 dòng này là bắt buộc để lưu file về repo
+      - name: Commit & push nếu có thay đổi
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add reviews_data.json
+          git commit -m "Cập nhật danh sách đánh giá [skip ci]" || echo "Không có thay đổi"
+          git push
