--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -27,7 +27,7 @@ jobs:
           SERPAPI_KEY: ${{ secrets.SERPAPI_KEY }}
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: python main.py
+        run: python -u main.py
 
       # 3 dòng này là bắt buộc để lưu file về repo
       - name: Commit & push nếu có thay đổi
