--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,8 +1,8 @@
-name: Check Google Maps Reviews Reviews
+name: Check Google Maps Reviews
 
 on:
   schedule:
-    - cron: '0 1,7,13 * * *'   # 8h, 14h, 20h giờ VN
+    - cron: '0 1,7,13 * * *'   # 8h, 14h, 20h giờ Việt Nam
   workflow_dispatch:
 
 jobs:
@@ -10,8 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}   # cần dòng này
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -29,11 +27,11 @@ jobs:
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: python -u main.py
 
-      # 3 dòng này là bắt buộc để lưu file về repo
-      - name: Commit & push nếu có thay đổi
+      # Phần này được sửa để KHÔNG BAO GIỜ lỗi dù file chưa tồn tại
+      - name: Commit & Push reviews_data.json nếu có thay đổi
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add reviews_data.json
-          git commit -m "Cập nhật danh sách đánh giá [skip ci]" || echo "Không có thay đổi"
-          git push
+          git add reviews_data.json 2>/dev/null || echo "No file to add"
+          git commit -m "Update reviews data [skip ci]" || echo "Nothing to commit"
+          git push || echo "Nothing to push"
